WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109774
Border changes on tables with collapsed borders doesn't relayout table cells
https://bugs.webkit.org/show_bug.cgi?id=109774
Summary
Border changes on tables with collapsed borders doesn't relayout table cells
Tony Chang
Reported
2013-02-13 17:15:27 PST
Border changes on tables with collapsed borders doesn't relayout table cells
Attachments
Patch
(4.96 KB, patch)
2013-02-13 17:16 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch
(5.06 KB, patch)
2013-02-14 10:11 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch
(5.47 KB, patch)
2013-02-19 10:43 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2013-02-13 17:16:38 PST
Created
attachment 188231
[details]
Patch
WebKit Review Bot
Comment 2
2013-02-13 19:05:53 PST
Comment on
attachment 188231
[details]
Patch
Attachment 188231
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/16530431
New failing tests: fast/table/border-collapsing/cached-change-row-border-width.html
Tony Chang
Comment 3
2013-02-13 19:11:50 PST
(In reply to
comment #2
)
> (From update of
attachment 188231
[details]
) >
Attachment 188231
[details]
did not pass chromium-ews (chromium-xvfb): > Output:
http://queues.webkit.org/results/16530431
> > New failing tests: > fast/table/border-collapsing/cached-change-row-border-width.html
Ah right, this depends on the fix in
bug 109639
.
Tony Chang
Comment 4
2013-02-14 10:11:57 PST
Created
attachment 188376
[details]
Patch
Build Bot
Comment 5
2013-02-15 04:33:44 PST
Comment on
attachment 188376
[details]
Patch
Attachment 188376
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/16590078
New failing tests: fast/table/border-collapsing/cached-change-row-border-width.html
Tony Chang
Comment 6
2013-02-19 10:43:19 PST
Created
attachment 189112
[details]
Patch
Dave Hyatt
Comment 7
2013-02-19 10:52:22 PST
Comment on
attachment 189112
[details]
Patch r=me
WebKit Review Bot
Comment 8
2013-02-19 13:19:41 PST
Comment on
attachment 189112
[details]
Patch Clearing flags on attachment: 189112 Committed
r143377
: <
http://trac.webkit.org/changeset/143377
>
WebKit Review Bot
Comment 9
2013-02-19 13:19:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug