Border changes on tables with collapsed borders doesn't relayout table cells https://bugs.webkit.org/show_bug.cgi?id=109774

Reviewed by David Hyatt.

Source/WebCore:

Test: fast/table/border-collapsing/dynamic-border-width-change.html

Changes to border top and border bottom on table rows also changes the size
of the table cell causing a relayout to be needed.

* rendering/RenderTableRow.cpp:
(WebCore::borderWidthChanged): Also include border top and bottom.
(WebCore::RenderTableRow::styleDidChange): Remove logical from the helper function name.

LayoutTests:

* fast/table/border-collapsing/dynamic-border-width-change-expected.txt: Added.
* fast/table/border-collapsing/dynamic-border-width-change.html: Added.


Canonical link: https://commits.webkit.org/128560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143377 268f45cc-cd09-0410-ab3c-d52691b4dbfc